Change btn-default classes.

--- a/geosk/templates/base/_resourcebase_snippet.html
+++ b/geosk/templates/base/_resourcebase_snippet.html
@@ -31,8 +31,9 @@
                       {% verbatim %}
                         </a>
 
+
                        <button
-                          class="btn btn-default btn-xs pull-right"
+                          class="btn btn-default btn-xs btn-square pull-right"
                           ng-if="cart"
                           ng-click="cart.toggleItem(item)"
                           data-toggle="tooltip"
