--- a/geosk/templates/layers/layer_list.html
+++ b/geosk/templates/layers/layer_list.html
@@ -13,7 +13,7 @@
     <a href="{% url "layer_upload" %}" target="_self">
         <div class="custom-layer-button pull-right">
             {% trans "Upload Layers" %}
-            <div class="btn btn-primary">+</div>
+            <div class="btn btn-default btn-square">+</div>
         </div>
     </a>
     {% endif %}
