--- a/geosk/templates/maps/map_list.html
+++ b/geosk/templates/maps/map_list.html
@@ -11,7 +11,7 @@
     <a href="{% url "new_map" %}" target="_self">
         <div class="custom-layer-button pull-right">
             {% trans "Create a New Map" %}
-            <div class="btn btn-primary">+</div>
+            <div class="btn btn-default btn-square">+</div>
         </div>
     </a>
     {% endif %}
