--- a/geosk/templates/maps/map_detail.html
+++ b/geosk/templates/maps/map_detail.html
@@ -65,6 +65,23 @@
                 <article id="info" class="tab-pane{% if tab == 'info' or not tab %} active{% endif %}">
                     <div class="row">
                         <div class="col-md-6">
+
+                          <h4 class="list-group-item-heading text-uppercase">{% trans "Map Layers" %}</h4>
+                          <p>{% trans "This map uses the following layers:" %}</p>
+                          <ul class="list-unstyled">
+                            {% for layer in resource.layer_set.all %}
+                            {% ifnotequal layer.group 'background' %}
+                              {% if layer.local %}
+                              <li><a href="{% url "layer_detail" layer.name %}">{{ layer.layer_title }}</a></li>
+                              {% else %}
+                              <li>{{ layer.layer_title }}</li>
+                              {% endif %}
+                            {% endifnotequal %}
+                            {% endfor %}
+                          </ul>
+
+                            {% include "base/_resourcebase_contact_snippet.html" %}
+
                         {% include "base/resourcebase_info_panel.html" %}
                         {% if USE_GEOSERVER and DISPLAY_WMS_LINKS %}
                         <p>
@@ -80,9 +97,9 @@
                         <div class="col-md-6">
           <ul class="list-group">
             <li class="list-group-item">
-              <a href="{% url "map_view" resource.id %}" class="btn btn-default btn-md btn-block custom-half-btn custom-green-btn">{% trans "View Map" %}</a>
+              <a href="{% url "map_view" resource.id %}" class="btn btn-default btn-half btn-md btn-active">{% trans "View Map" %}</a>
             {% if "change_resourcebase" in perms_list  or "change_resourcebase_metadata" in perms_list %}
-              <button class="btn btn-primary btn-md btn-block custom-half-btn no-margin" data-toggle="modal" data-target="#edit-map">{% trans "Edit Map" %}</button>
+              <button class="btn btn-default btn-md btn-half no-margin-right" data-toggle="modal" data-target="#edit-map">{% trans "Edit Map" %}</button>
             <div class="modal fade" id="edit-map" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -128,13 +145,13 @@
 
             {% if "download_resourcebase" in perms_list %}
             <li class="list-group-item">
-              <button class="btn btn-primary btn-md btn-block custom-full-btn" data-toggle="modal" data-target="#download-map">{% trans "Download Map" %}</button>
+              <button class="btn btn-default btn-md btn-block " data-toggle="modal" data-target="#download-map">{% trans "Download Map" %}</button>
             </li>
             {% endif %}
 
             <li class="list-group-item">
                <a href="{% url "map_metadata_detail" resource.id %}">
-                   <button class="btn btn-primary btn-md btn-block custom-full-btn" >{% trans "Metadata Detail" %}</button>
+                   <button class="btn btn-default btn-md btn-block " >{% trans "Metadata Detail" %}</button>
                </a>
             </li>
 
@@ -168,21 +185,6 @@
             </li>
             {% endcomment %}
 
-            <li class="list-group-item">
-              <h4 class="list-group-item-heading">{% trans "Map Layers" %}</h4>
-              <p>{% trans "This map uses the following layers:" %}</p>
-              <ul class="list-unstyled">
-                {% for layer in resource.layer_set.all %}
-                {% ifnotequal layer.group 'background' %}
-                  {% if layer.local %}
-                  <li><a href="{% url "layer_detail" layer.name %}">{{ layer.layer_title }}</a></li>
-                  {% else %}
-                  <li>{{ layer.layer_title }}</li>
-                  {% endif %}
-                {% endifnotequal %}
-                {% endfor %}
-              </ul>
-            </li>
 
             {% if documents.count > 0 %}
             <li class="list-group-item">
@@ -200,7 +202,7 @@
             <li class="list-group-item">
               <h4>{% trans "Permissions" %}</h4>
               <p>{% trans "Specify which users can view or modify this map" %}</p>
-              <button class="btn btn-primary btn-md btn-block custom-full-btn" data-toggle="modal" data-target="#_permissions"><i class="fa custom-icon custom-icon-hover custom-icon-lock pull-left"></i> {% trans "Change Permissions of this Map" %}</button>
+              <button class="btn btn-default btn-md btn-block" data-toggle="modal" data-target="#_permissions"><i class="fa custom-icon custom-icon-hover custom-icon-lock pull-left"></i> {% trans "Change Permissions of this Map" %}</button>
             </li>
             {% include "_permissions_form.html" %}
             {% endif %}
@@ -248,7 +250,7 @@
             </li>
             {% endif %}
 
-            {% include "base/_resourcebase_contact_snippet.html" %}
+
 
           </ul>
 
