--- a/geosk/templates/search/_sort_filters.html
+++ b/geosk/templates/search/_sort_filters.html
@@ -2,7 +2,7 @@
 
 <div class="btn-group pull-right" role="group" aria-label="tools">
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default dropdown-toggle custom-btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button type="button" class="btn btn-default btn-noborder dropdown-toggle custom-btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <div ng-if="dataValue == 'title' || dataValue == 'username'" ng-cloak>
         <i class="fa fa-sort-alpha-asc fa-lg"></i>
         <i class="fa fa-angle-down fa-lg"></i>
@@ -13,12 +13,10 @@
       </div>
       <div ng-if="dataValue == 'date' || dataValue == 'last_modified' || dataValue == 'date_joined'" ng-cloak>
         <i class="fa fa-clock-o"></i>
-        <i class="fa fa-clock-o fa-level-up"></i>
         <i class="fa fa-angle-down fa-lg"></i>
       </div>
       <div ng-if="dataValue == '-date' || dataValue == '-last_modified' || dataValue == '-date_joined'" ng-cloak>
         <i class="fa fa-clock-o"></i>
-        <i class="fa fa-clock-o fa-level-down"></i>
         <i class="fa fa-angle-down fa-lg"></i>
       </div>
       <div ng-if="dataValue == '-popular_count'" ng-cloak>
@@ -27,7 +25,6 @@
       </div>
       <div ng-if="dataValue == null" ng-cloak>
         <i class="fa fa-clock-o"></i>
-        <i class="fa fa-clock-o fa-level-down"></i>
         <i class="fa fa-angle-down fa-lg"></i>
       </div>
     </button>
