--- a/geosk/templates/layers/layer_detail.html
+++ b/geosk/templates/layers/layer_detail.html
@@ -85,9 +85,25 @@
                   {% endif %}
                 {% endif %}
 
-                {% include "base/resourcebase_info_panel.html" %}
+                <li class="list-group-item">
+                  <h4>{% trans "Maps using this layer" %}</h4>
+                  {% if resource.maps %}
+                    <p>{% trans "List of maps using this layer:" %}</p>
+                    {% endif %}
+                    <ul class="list-unstyled">
+                      {% for maplayer in resource.maps %}
+                        <li><a href="{{ maplayer.map.get_absolute_url }}">{{ maplayer.map.title }}</a></li>
+                      {% empty %}
+                        <li>{% trans "This layer is not currently used in any maps." %}</li>
+                      {% endfor %}
+                    </ul>
+                </li>
 
-                {% if USE_GEOSERVER and DISPLAY_WMS_LINKS %}
+                {% if user.is_staff %}
+                {% include "base/resourcebase_info_panel.html" %}
+                {% endif %}
+
+                {% if USE_GEOSERVER and DISPLAY_WMS_LINKS and user.is_staff %}
                 <p>
                   {% if request.user.is_authenticated and 'access_token' in request.session %}
                     <a href="{% url 'capabilities_layer' resource.id %}?access_token={{ request.session.access_token }}">
@@ -102,7 +118,7 @@
                   {% if resource.storeType != "remoteStore" %}
                     <li class="list-group-item">
                     {% if links or links_download %}
-                       <button class="btn btn-default btn-md btn-half btn-block" data-toggle="modal" data-target="#download-layer">{% trans "Download Layer" %}</button>
+                       <button class="btn btn-default btn-md {% if "change_resourcebase" in perms_list %}btn-half{% endif %} btn-block" data-toggle="modal" data-target="#download-layer"><i class="fa custom-icon custom-icon-hover custom-icon-download pull-left"></i> {% trans "Download Layer" %}</button>
                     {% else %}
                       {% if request.user.is_authenticated %}
                       <button class="btn btn-default btn-md btn-half btn-block" id="request-download">{% trans "Request Download" %}</button>
@@ -339,15 +355,19 @@
                   {% get_obj_perms request.user for resource.layer as "layer_perms" %}
                 {% endif %}
 
+                {% if user.is_staff %}
                 <li class="list-group-item">
                   <a href="{% url "layer_metadata_detail" resource.alternate %}">
                     <button class="btn btn-default btn-md btn-block">{% trans "Metadata Detail" %}</button>
                   </a>
                 </li>
+                {% endif %}
 
+                {% if user.is_staff %}
                 <li class="list-group-item">
                   <button class="btn btn-default btn-md btn-block custom-full-btn" data-toggle="modal" data-target="#download-metadata">{% trans "Download Metadata" %}</button>
                 </li>
+                {% endif %}
 
                 <div class="modal fade" id="download-metadata" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
@@ -392,23 +412,9 @@
 
 
                 <li class="list-group-item">
-                  <h4>{% trans "Maps using this layer" %}</h4>
-                  {% if resource.maps %}
-                    <p>{% trans "List of maps using this layer:" %}</p>
-                    {% endif %}
-                    <ul class="list-unstyled">
-                      {% for maplayer in resource.maps %}
-                        <li><a href="{{ maplayer.map.get_absolute_url }}">{{ maplayer.map.title }}</a></li>
-                      {% empty %}
-                        <li>{% trans "This layer is not currently used in any maps." %}</li>
-                      {% endfor %}
-                    </ul>
-                </li>
-                {% if user.is_superuser %}
-                <li class="list-group-item">
                     <a href="{% url "new_map" %}?layer={{resource.service_typename}}" class="btn btn-default btn-block "><i class="fa custom-icon custom-icon-hover custom-icon-map pull-left"></i> {% trans "Create a map using this layer" %}</a>
                 </li>
-                {% endif %}
+
                 {% if maps %}
                     <li class="list-group-item">
                         <h4>{% trans "Add the layer to an existing map" %}</h4>
@@ -426,7 +432,7 @@
                     </li>
                 {% endif %}
 
-                {% if documents.count > 0 %}
+                {% if documents.count > 0 and user.is_staff %}
                 <li class="list-group-item">
                   <h4>{% trans "Documents related to this layer" %}</h4>
                   <p>{% trans "List of documents related to this layer:" %}</p>
@@ -438,7 +444,7 @@
                 </li>
                 {% endif %}
 
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated and user.is_staff %}
                 <li class="list-group-item">
                   <h4>{% trans "Styles" %}</h4>
                    <p>{% trans "The following styles are associated with this layer. Choose a style to view it in the preview map." %}</p>
@@ -494,7 +500,9 @@
                 </li>
                 {% endif %}
 
+                {% if user.is_staff %}
                 {% include "base/_resourcebase_contact_snippet.html" %}
+                {% endif %}
 
 
                </ul>
@@ -652,11 +660,13 @@
         {% endif %}
       </article>
 
+      {% comment %}
       {% block social_links %}
       {% if DISPLAY_SOCIAL %}
         {% include "social_links.html" %}
       {% endif %}
       {% endblock %}
+      {% endcomment %}
 
       {% if DISPLAY_COMMENTS %}
       <article id="comments" class="tab-pane">
