Continue BF GUI modifications.

--- a/geosk/templates/search/_search_content.html
+++ b/geosk/templates/search/_search_content.html
@@ -27,20 +27,20 @@
               {% include "search/_text_filter.html" %}
             {% endif  %}
         <div id="slide-pane">
-            {% if SEARCH_FILTERS.H_KEYWORDS_ENABLED %}
+            {% if SEARCH_FILTERS.H_KEYWORDS_ENABLED and user.is_superuser and user.is_staff %}
               {% include "search/_h_keywords_filter.html" %}
             {% endif %}
-            {% if SEARCH_FILTERS.T_KEYWORDS_ENABLED %}
+            {% if SEARCH_FILTERS.T_KEYWORDS_ENABLED and user.is_superuser and user.is_staff %}
               {% include "search/_t_keywords_filter.html" %}
             {% endif %}
-            {% if SEARCH_FILTERS.TYPE_ENABLED and include_type_filter == 'true' %}
+            {% if SEARCH_FILTERS.TYPE_ENABLED and include_type_filter == 'true' and user.is_superuser and user.is_staff or SEARCH_FILTERS.TYPE_ENABLED and facet_type != 'maps' %}
               {% include "search/_type_filters.html" %}
             {% endif %}
             {% include "search/_general_filters.html" %}
-            {% if SEARCH_FILTERS.REGION_ENABLED %}
+            {% if SEARCH_FILTERS.REGION_ENABLED and user.is_superuser and user.is_staff %}
               {% include "search/_region_filter.html" %}
             {% endif %}
-            {% if SEARCH_FILTERS.EXTENT_ENABLED %}
+            {% if SEARCH_FILTERS.EXTENT_ENABLED and user.is_superuser and user.is_staff %}
               {% include "search/_extent_filter.html" %}
             {% endif %}
         </div>
