--- a/geosk/templates/base/_resourcebase_snippet.html
+++ b/geosk/templates/base/_resourcebase_snippet.html
@@ -31,7 +31,12 @@
                       {% verbatim %}
                       </a>
 
+                        <a ng-if="item.detail_url.indexOf('/maps/') > -1" class="no-underline btn btn-default btn-xs ng-scope custom-button-wide" href="/maps/{{item.id}}/view">View Map</a>
 
+                      <a ng-if="item.detail_url.indexOf('/layers/') > -1" class="no-underline btn btn-default btn-xs ng-scope custom-button-wide" href="{% endverbatim %}{% url "new_map" %}?layer={% verbatim %}{{ item.detail_url.substring(8) }}">
+                      {% endverbatim %}
+                      {% trans "Create a Map" %}</a>
+                      {% verbatim %}
                        <button
                           class="btn btn-default btn-xs btn-square pull-right"
                           ng-if="cart"
@@ -49,14 +54,14 @@
                     <li><a href="/people/profile/{{ item.owner__username }}"><i class="fa fa-user"></i>{{ item.owner_name }}</a></li>
                     <li><a href="{{ item.detail_url }}#info"><i class="fa fa-calendar-o"></i>{{ item.date|date:'d MMM y' }}</a></li>
                     <li><a href="{{ item.detail_url }}"><i class="fa fa-eye"></i>{{ item.popular_count }}</a></li>
-                    <li><a href="{{ item.detail_url }}#share"><i class="fa fa-share"></i>{{ item.share_count }}</a></li>
+                    <!--<li><a href="{{ item.detail_url }}#share"><i class="fa fa-share"></i>{{ item.share_count }}</a></li>
                     <li><a href="{{ item.detail_url }}#rate"><i class="fa fa-star"></i>{{ item.rating }}</a></li>
                     <li><a ng-if="item.detail_url.indexOf('/layers/') > -1" href="{% endverbatim %}{% url "new_map" %}?layer={% verbatim %}{{ item.detail_url.substring(8) }}">
                       {% endverbatim %}
                       <i class="fa fa-map-marker"></i>{% trans "Create a Map" %}</a>
                       {% verbatim %}
                     </li>
-                    <li><a ng-if="item.detail_url.indexOf('/maps/') > -1" href="/maps/{{item.id}}/view"><i class="fa fa-map-marker"></i>View Map</a></li>
+                    <li><a ng-if="item.detail_url.indexOf('/maps/') > -1" href="/maps/{{item.id}}/view"><i class="fa fa-map-marker"></i>View Map</a></li>-->
                   </ul>
                 </div>
               </div>
