--- a/geosk/templates/maps/map_detail.html
+++ b/geosk/templates/maps/map_detail.html
@@ -82,8 +82,10 @@
 
                             {% include "base/_resourcebase_contact_snippet.html" %}
 
+                        {% if user.is_superuser and user.is_staff %}
                         {% include "base/resourcebase_info_panel.html" %}
-                        {% if USE_GEOSERVER and DISPLAY_WMS_LINKS %}
+                        {% endif %}
+                        {% if USE_GEOSERVER and DISPLAY_WMS_LINKS and user.is_superuser and user.is_staff %}
                         <p>
                           {% if request.user.is_authenticated and 'access_token' in request.session %}
                             <a href="{% url 'capabilities_map' resource.id %}?access_token={{ request.session.access_token }}">
@@ -97,7 +99,7 @@
                         <div class="col-md-6">
           <ul class="list-group">
             <li class="list-group-item">
-              <a href="{% url "map_view" resource.id %}" class="btn btn-default btn-half btn-md btn-active">{% trans "View Map" %}</a>
+              <a href="{% url "map_view" resource.id %}" class="btn btn-default {% if "change_resourcebase" in perms_list  or "change_resourcebase_metadata" in perms_list %}btn-half{% else %}btn-block{% endif %} btn-md btn-active ">{% trans "View Map" %}</a>
             {% if "change_resourcebase" in perms_list  or "change_resourcebase_metadata" in perms_list %}
               <button class="btn btn-default btn-md btn-half no-margin-right" data-toggle="modal" data-target="#edit-map">{% trans "Edit Map" %}</button>
             <div class="modal fade" id="edit-map" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -143,17 +145,19 @@
             {% endif %}
             </li>
 
-            {% if "download_resourcebase" in perms_list %}
+            {% if "download_resourcebase" in perms_list and user.is_superuser and user.is_staff %}
             <li class="list-group-item">
               <button class="btn btn-default btn-md btn-block " data-toggle="modal" data-target="#download-map">{% trans "Download Map" %}</button>
             </li>
             {% endif %}
 
+            {% if user.is_superuser and user.is_staff %}
             <li class="list-group-item">
                <a href="{% url "map_metadata_detail" resource.id %}">
                    <button class="btn btn-default btn-md btn-block " >{% trans "Metadata Detail" %}</button>
                </a>
             </li>
+            {% endif %}
 
             <div class="modal fade" id="download-map" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
@@ -235,7 +239,7 @@
             {% endif %}
 
 
-            {% if resource.is_public and "change_resourcebase" in perms_list or resource.layer_group %}
+            {% if resource.is_public and "change_resourcebase" in perms_list and user.is_superuser and user.is_staff or resource.layer_group and user.is_superuser and user.is_staff %}
             <li class="list-group-item">
               <h4>{% trans "Map WMS" %}</h4>
               <dl>{% if resource.layer_group %}
