--- a/geosk/templates/search/_general_filters.html
+++ b/geosk/templates/search/_general_filters.html
@@ -25,7 +25,7 @@
   </ul>
 </nav>
 {% endif %}
-{% if SEARCH_FILTERS.OWNERS_ENABLED and user.is_superuser and user.is_staff %}
+{% if SEARCH_FILTERS.OWNERS_ENABLED and user.is_superuser %}
 <nav class="filter" ng-cloak>
   <h4><a href="#" class="toggle toggle-nav"><i class="fa fa-chevron-right"></i> {% trans "Owners" %}</a></h4>
   <ul class="nav closed" id="owners">
