--- a/geosk/templates/gdpr.html
+++ b/geosk/templates/gdpr.html
@@ -3,11 +3,24 @@
 {% load i18n %}
 {% block title %} {% trans "GDPR" %} - {{ block.super }} {% endblock %}
 
-{% block body %}
-    <h1>GDPR</h1>
-    <div>
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+{% block custom-wrap-class %}bg--lightest-green{% endblock %}
+{% block custom-container-class %}bg--white{% endblock %}
+
+{% block body_outer %}
+    <div class="custom-padding-bottom">
+        <div class="page-header">
+            {% if user.is_superuser %}
+            <a href="{% url "layer_upload" %}" target="_self">
+                <div class="custom-layer-button pull-right">
+                    {% trans "Upload Layers" %}
+                    <div class="btn btn-default btn-square">+</div>
+                </div>
+            </a>
+            {% endif %}
+          <h2 class="page-title">{% trans "GDPR" %}</h2>
+        </div>
+        <div>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
     </div>
 {% endblock %}
-
-
