--- a/geosk/templates/layers/layer_detail.html
+++ b/geosk/templates/layers/layer_detail.html
@@ -100,17 +100,26 @@
                 </li>
 
                 {% if user.is_staff %}
-                {% include "base/resourcebase_info_panel.html" %}
+                {% include "base/_resourcebase_contact_snippet.html" %}
                 {% endif %}
 
+                {% comment %}
+                {% if user.is_staff %}
+                {% include "base/resourcebase_info_panel.html" %}
+                {% endif %}
+                {% endcomment %}
+
                 {% if USE_GEOSERVER and DISPLAY_WMS_LINKS and user.is_staff %}
+                <!--
                 <p>
                   {% if request.user.is_authenticated and 'access_token' in request.session %}
                     <a href="{% url 'capabilities_layer' resource.id %}?access_token={{ request.session.access_token }}">
                   {% else %}
                     <a href="{% url 'capabilities_layer' resource.id %}">
                   {% endif %}
-                  <i class="fa fa-map"></i> {% trans 'Layer WMS GetCapabilities document' %}</a></p>
+                  <i class="fa fa-map"></i> {% trans 'Layer WMS GetCapabilities document' %}</a>
+                </p>
+                -->
                 {% endif %}
             </div>
             <div class="col-md-6">
@@ -356,6 +365,7 @@
                 {% endif %}
 
                 {% if user.is_staff %}
+                <!--
                 <li class="list-group-item">
                   <a href="{% url "layer_metadata_detail" resource.alternate %}">
                     <button class="btn btn-default btn-md btn-block">{% trans "Metadata Detail" %}</button>
@@ -367,6 +377,7 @@
                 <li class="list-group-item">
                   <button class="btn btn-default btn-md btn-block custom-full-btn" data-toggle="modal" data-target="#download-metadata">{% trans "Download Metadata" %}</button>
                 </li>
+                -->
                 {% endif %}
 
                 <div class="modal fade" id="download-metadata" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -433,6 +444,7 @@
                 {% endif %}
 
                 {% if documents.count > 0 and user.is_staff %}
+                <!--
                 <li class="list-group-item">
                   <h4>{% trans "Documents related to this layer" %}</h4>
                   <p>{% trans "List of documents related to this layer:" %}</p>
@@ -442,9 +454,11 @@
                     {% endfor %}
                   </ul>
                 </li>
+                -->
                 {% endif %}
 
                 {% if user.is_authenticated and user.is_staff %}
+                <!--
                 <li class="list-group-item">
                   <h4>{% trans "Styles" %}</h4>
                    <p>{% trans "The following styles are associated with this layer. Choose a style to view it in the preview map." %}</p>
@@ -480,13 +494,16 @@
                     {% endif %}
                   </ul>
                 </li>
+                -->
                 {% endif %}
 
                 {% if GEONODE_SECURITY_ENABLED %}
                 {% if "change_resourcebase_permissions" in perms_list %}
                 <li class="list-group-item">
+                <!--
                   <h4>{% trans "Permissions" %}</h4>
                   <p>{% trans "Click the button below to change the permissions of this layer." %}</p>
+                -->
                   <p><a href="#modal_perms" data-toggle="modal" class="btn btn-default btn-block " data-target="#_permissions"><i class="fa custom-icon custom-icon-hover custom-icon-lock pull-left"></i> {% trans "Change Layer Permissions" %}</a></p>
                 </li>
                 {% endif %}
@@ -500,13 +517,10 @@
                 </li>
                 {% endif %}
 
-                {% if user.is_staff %}
-                {% include "base/_resourcebase_contact_snippet.html" %}
-                {% endif %}
-
 
                </ul>
             </div>
+
 
             {% if GEONODE_SECURITY_ENABLED %}
                 {% include "_permissions_form.html" %}
