--- a/geosk/templates/maps/map_detail.html
+++ b/geosk/templates/maps/map_detail.html
@@ -82,6 +82,7 @@
 
                             {% include "base/_resourcebase_contact_snippet.html" %}
 
+                        {% comment %}
                         {% if user.is_superuser and user.is_staff %}
                         {% include "base/resourcebase_info_panel.html" %}
                         {% endif %}
@@ -94,6 +95,7 @@
                           {% endif %}
                           <i class="fa fa-map"></i> {% trans 'Map layers WMS GetCapabilities document' %}</a></p>
                         {% endif %}
+                        {% endcomment %}
                         </div>
 
                         <div class="col-md-6">
@@ -145,11 +147,13 @@
             {% endif %}
             </li>
 
+            {% comment %}
             {% if "download_resourcebase" in perms_list and user.is_superuser and user.is_staff %}
             <li class="list-group-item">
               <button class="btn btn-default btn-md btn-block " data-toggle="modal" data-target="#download-map">{% trans "Download Map" %}</button>
             </li>
             {% endif %}
+
 
             {% if user.is_superuser and user.is_staff %}
             <li class="list-group-item">
@@ -158,6 +162,7 @@
                </a>
             </li>
             {% endif %}
+             {% endcomment %}
 
             <div class="modal fade" id="download-map" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
@@ -187,7 +192,7 @@
             <li class="list-group-item">
               <a href="#" class="btn btn-default btn-md btn-block">{% trans "Print Map" %}</a>
             </li>
-            {% endcomment %}
+
 
 
             {% if documents.count > 0 %}
@@ -201,15 +206,20 @@
               </ul>
             </li>
             {% endif %}
+            {% endcomment %}
 
             {% if "change_resourcebase_permissions" in perms_list %}
             <li class="list-group-item">
+              {% comment %}
               <h4>{% trans "Permissions" %}</h4>
               <p>{% trans "Specify which users can view or modify this map" %}</p>
+              {% endcomment %}
               <button class="btn btn-default btn-md btn-block" data-toggle="modal" data-target="#_permissions"><i class="fa custom-icon custom-icon-hover custom-icon-lock pull-left"></i> {% trans "Change Permissions of this Map" %}</button>
             </li>
             {% include "_permissions_form.html" %}
             {% endif %}
+
+            {% comment %}
             {% if user.is_superuser %}
             <li class="list-group-item">
               <h4>{% trans "Copy this map" %}</h4>
@@ -217,6 +227,8 @@
               <a href="{% url "new_map" %}?copy={{ resource.id }}" class="btn btn-default btn-md btn-block custom-full-btn">{% trans "Create a New Map" %}</a>
             </li>
             {% endif %}
+            {% endcomment %}
+
             {% if 'geonode.qgis_server' in INSTALLED_APPS %}
               <li class="list-group-item">
                   <h4>{% trans "Embed this map" %}</h4>
@@ -238,7 +250,7 @@
               </li>
             {% endif %}
 
-
+            {% comment %}
             {% if resource.is_public and "change_resourcebase" in perms_list and user.is_superuser and user.is_staff or resource.layer_group and user.is_superuser and user.is_staff %}
             <li class="list-group-item">
               <h4>{% trans "Map WMS" %}</h4>
@@ -253,7 +265,7 @@
               <dl id="layer-group-dl"></dl>
             </li>
             {% endif %}
-
+            {% endcomment %}
 
 
           </ul>
