--- a/geosk/templates/site_base.html
+++ b/geosk/templates/site_base.html
@@ -16,7 +16,7 @@
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 	        <i class="fa fa-navicon fa-lg"></i>
 	      </button>
-	      <a class="navbar-brand header-logo" {% if user.is_superuser and user.is_staff %}style="width:100px"{% endif %} href="{% url "home" %}">IBF</a>
+	      <a class="navbar-brand header-logo" href="{% url "home" %}">IBF</a>
 	    </div>
 	    <div id="navbar" class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav toolbar  custom-nav" {% if not user.is_authenticated %}style="display:none"{% endif %}>
@@ -25,23 +25,27 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
   <ul class="dropdown-menu custom-dropdown">
     <li><a href="{% url "layer_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Explore layers" %}</a></li>
-    {% if user.is_superuser and user.is_staff %}
+    <!--
     <li><a href="{% url "document_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Documents" %}</a></li>
-    {% endif %}
+    -->
     {% if user.is_authenticated %}
     {% if user.is_superuser %}
     {% if user.is_staff %}
+    <!--
     <li><a href="{% url "services" %}?limit={{ CLIENT_RESULTS_LIMIT }}">{% trans "Remote Services" %}</a></li>
     <li role="separator" class="divider"></li>
+    -->
     {% endif %}
     <li><a href="{% url "layer_upload" %}">{% trans 'Upload Layer' %}</a></li>
     {% endif %}
     {% if 'geonode.contrib.createlayer' in INSTALLED_APPS %}
       <li><a href="{% url "layer_create" %}">{% trans "Create Layer" %}</a></li>
     {% endif %}
-    {% if user.is_superuser and user.is_staff %}
+    {% if user.is_superuser %}
+    <!--
     <li><a href="{% url "document_upload" %}">{% trans 'Upload Document' %}</a></li>
     <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
+    -->
     {% endif %}
     {% endif %}
   </ul>
@@ -65,18 +69,19 @@
   <ul class="dropdown-menu custom-dropdown">
     <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
   {% if user.is_staff %}
+    <!--
     <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
     <li><a href="{% url "group_category_list" %}">{% trans "Group Categories" %}</a></li>
     {% if perms.announcements.can_manage %}
     <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
     {% endif %}
-
-
     <li role="separator" class="divider"></li>
+     -->
     <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
-
+    <!--
     <li><a href="{% url "invitations:send-invite" %}">{% trans "Invite User" %}</a></li>
     <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+    -->
   {% endif %}
   </ul>
   {% endif %}
@@ -84,6 +89,7 @@
 
 {% block extra_tab %}
 {% if user.is_staff %}
+<!--
 <li id="nav_osk">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Sensors" %}<i class="fa fa-angle-down fa-lg"></i></a>
   {% if user.is_authenticated %}
@@ -100,6 +106,7 @@
   {% endif %}
 </li>
 <li><a href="{% url "about_services" %}">{% trans "Services" %}</a></li>
+-->
 {% endif %}
 {% endblock %}
 {% endblock %}
@@ -135,19 +142,23 @@
               </a>
               <ul class="dropdown-menu custom-dropdown">
                 <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
-                {% if user.is_superuser and user.is_staff %}
+                {% if user.is_superuser %}
+                <!--
                 <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
                 <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
                 <li role="separator" class="divider"></li>
+                -->
                 <li><a href="{% url "admin:index" %}">Admin</a></li>
                 {% if 'geonode.geoserver' in INSTALLED_APPS %}
                 <li><a href="{{ GEOSERVER_BASE_URL }}index.html">GeoServer</a></li>
                 {% endif %}
                 {% endif %}
                 {% if user.is_superuser and USE_MONITORING %}
+                <!--
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url "monitoring:index" %}">{% trans "Monitoring" %}</a></li>
                 <li role="separator" class="divider"></li>
+                -->
                 {% endif %}
                 <li><a href="{% url "help" %}">{% trans "Help" %}</a></li>
                 <!--<li role="separator" class="divider"></li>-->
