--- a/geosk/templates/maps/map_detail.html
+++ b/geosk/templates/maps/map_detail.html
@@ -41,6 +41,7 @@
         <style>
         #paneltbar {
             margin-top: 1px !important;
+            display: none;
         }
         </style>
 
