--- a/geosk/templates/search/_search_user_content.html
+++ b/geosk/templates/search/_search_user_content.html
@@ -15,7 +15,7 @@
         -->
                     <div class="input-group custom-search">
                     <input name="text_search_input" id="text_search_input" ng-model="text_query" type="text"
-                           placeholder="Search by name" class="form-control" data-query-key='name__icontains'>
+                           placeholder="{% trans 'Search by name' %}" class="form-control" data-query-key='name__icontains'>
                     <span class="input-group-btn">
                         <button class="btn btn-primary" type="submit" id="text_search_btn"><i class="fa fa-search"></i></button>
                     </span>
