--- a/geosk/templates/base/_resourcebase_snippet.html
+++ b/geosk/templates/base/_resourcebase_snippet.html
@@ -43,7 +43,7 @@
                           ng-click="cart.toggleItem(item)"
                           data-toggle="tooltip"
                           data-placement="bottom"
-                          title="Select"><i ng-class="cart.getFaClass(item.id)" class="fa fa-lg"></i></button>
+                          title="{% endverbatim %}{% trans 'Select'%}{% verbatim %}"><i ng-class="cart.getFaClass(item.id)" class="fa fa-lg"></i></button>
                   </h4>
                 <!--</div>-->
               <!--</div>-->
